Fix background image path for production build

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@
 body {
   margin: 0;
   background: var(--bg);
-  background-image: url('images/recep.jpg');
+  background-image: url('/images/recep.jpg');
   background-size: 120px 120px;
   background-repeat: repeat;
   background-position: 0 0, 180px 180px;
